now were cooking!

--- a/index.html
+++ b/index.html
@@ -152,12 +152,11 @@ var coords = {
 
 // Variable shortcuts for animal to be created
 var bear, logo, bird, cat;
-//Bbove we declare in shortcut format. Below we assign them to the object values 
+//Above we declare in shortcut format. Below we assign them to the object values 
 bear = coords.bearObj;
 logo = coords.logoObj;
 bird = coords.birdObj;
 cat = coords.catObj;
-
 
 
 var superLoop = function(animal){
